# avg_messenger

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  prod-requirements.txt  project_dump.txt  pyproject.toml  requirements.txt  test-requirements.txt  test_result.txt
alembic/: env.py
alembic/versions/: 26d6afd6d79e_added_chats_and_chat_members_tables.py  3a7db9158b6e_added_users_and_messages_tables.py
app/: main.py
app/auth/: dependencies.py  exceptions.py  router.py  schemas.py  services.py
app/chat/: exceptions.py  router.py  schemas.py  services.py
app/core/: config.py  dependencies.py  exceptions.py  passwords.py  rate_limit.py  redis.py  token.py
app/db/: dependencies.py  engine.py  models.py
app/repositories/: chat_members.py  chats.py  messages.py  users.py
static/: auth.html  auth.js  chat.html  chat.js  chat_list.html  chat_list.js  index.html
tests/: conftest.py
tests/auth/: test_router.py  test_schemas.py  test_services.py
tests/chat/: test_router.py  test_schemas.py
